Compiler/src/main/java/Testing/Tests/SyntacticTests/passing/doubleFirstIdPrimario.ru
/? Descripción: caso de prueba que se fija si se ha lidiado con la regla Primario
/? que tiene dos id en primeros probando la opción de AccesoVar-F
/? Salida esperada:
/? CORRECTO: ANALISIS SINTACTICO

start {( xdid . xdid  ) ;}