Compiler/src/main/java/Testing/Tests/SyntacticTests/failing/implAfterStart.ru
/? Descripción: este caso de prueba se fija si el lenguaje tira error cuando
/? tiene un impl después de un start
/? Salida esperada: Error sintactico
start {}
impl Bruh {.(){}}